--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,13 +33,13 @@
 
             tools:text="Last Name" />
 
-        <TextView
+        <EditText
             android:id="@+id/text_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:text="@{user.username}"
+            android:text="@={user.username}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_name"
 
@@ -65,7 +65,7 @@
 
             android:text="Registred"
 
-            android:checked="@{user.registered}"
+            android:checked="@={user.registered}"
             android:enabled="@{user.age>=25 ? true : false}"
             android:visibility="@{user.age>=18 ? View.VISIBLE : View.GONE}"
 
@@ -116,6 +116,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintStart_toEndOf="parent"/-->
     <LinearLayout
+        android:id="@+id/command_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
@@ -149,6 +150,35 @@
         />
 
     </LinearLayout>
+        
+        <Button
+            android:id="@+id/get_older_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+
+            android:text="Get older"
+
+            android:onClick="@{() -> user.makeOlder()}"
+
+            app:layout_constraintBottom_toTopOf="@id/command_buttons"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+
+            android:text="Show current age"
+
+            android:onClick="@{() -> handlers.toastValue(user.registered)}"
+
+            app:layout_constraintBottom_toTopOf="@id/get_older_button"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
